--- a/app/src/main/res/layout/activity_pantalla_principal.xml
+++ b/app/src/main/res/layout/activity_pantalla_principal.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".Vistas.Pantalla_Principal">
 
+    <Button
+        android:id="@+id/btnlistado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="251dp"
+        android:text="Listado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnequipo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="60dp"
+        android:text="Equipo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
